# R-Type

./: CMakeLists.txt  Documentation R-Type.docx  main.cpp
Client/include/Core/GameState/Menu/: Menu.hpp
Client/lib/GameCore/include/Tools/: Tools.hpp
Client/lib/GameCore/src/Behavior/: Behavior.cpp
Client/lib/GameCore/src/Objects/: Objects.cpp
Client/lib/Parser/src/: Parser.cpp
Client/lib/graphical/sfml/: Makefile
Client/lib/graphical/sfml/include/: Components.hpp  SFMLTools.hpp
Client/lib/graphical/sfml/src/: Components.cpp  Sfml_c.cpp
Client/src/: Core.cpp  main.cpp
Client/src/GameState/Menu/: Menu.cpp
DEV/Adrien/include/server/: IGame.hpp  Rtype.hpp
DEV/Adrien/src/server/: Object.cpp
DEV/Alexandre/: Makefile
DEV/Alexandre/client/include/: client.hpp
DEV/Alexandre/client/src/: client.cpp  main.cpp
DEV/Alexandre/server/include/: server.hpp
DEV/Alexandre/server/src/: main.cpp  server.cpp
DEV/Alexis/: Makefile  rtype
DEV/Alexis/Client/: Makefile
DEV/Alexis/Client/backup_lib/GameCore/: Makefile
DEV/Alexis/Client/backup_lib/graphical/sfml/: Makefile
DEV/Alexis/Client/include/Core/: Core.hpp
DEV/Alexis/Client/lib/: Makefile
DEV/Alexis/Client/lib/GameCore/: Makefile
DEV/Alexis/Client/lib/Parser/: Makefile
DEV/Alexis/Client/lib/Parser/include/: Parser.hpp
DEV/Alexis/Client/src/: Core.cpp  main.cpp
DEV/Alexis/include/Core/: Core.hpp
DEV/Alexis/include/graphical/SFML/: IGLib.hpp
DEV/Alexis/lib/graphical/sfml/: Makefile
DEV/Alexis/lib/graphical/sfml/src/: Sfml.cpp  (+2 more)
DEV/Alexis/src/: Components.cpp  Core.cpp
DEV/Alexis/src/GameState/Menu/: Menu.cpp
include/server/: IGame.hpp  Object.hpp  Rtype.hpp
src/server/: Object.cpp  Rtype.cpp  server.cpp
test/client/include/: client.hpp
test/client/src/: main.cpp
test/server/include/: server.hpp
test/server/src/: main.cpp  server.cpp
(+30 files in other folders)
